fixes android keyboard on chat fixes chat on ios7
closes #65 #64 #54

--- a/scss/chat.scss
+++ b/scss/chat.scss
@@ -63,7 +63,6 @@
     .chat-message, .chat-message-self {
         padding-left: 10px;
         padding-right: 10px;
-        margin-top: 5px;
         margin-bottom: 5px;
         &:first-child {
             margin-top: 15px;
