--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7607,7 +7607,6 @@ a.button {
   .chat-view .chat-message, .chat-view .chat-message-self {
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 5px;
     margin-bottom: 5px; }
     .chat-view .chat-message:first-child, .chat-view .chat-message-self:first-child {
       margin-top: 15px; }
